Fix ViewuseEdit and 'dialog-popout' so sections are side-by-side
Remove whitespace between elements.

--- a/tracuse_project/assets/styles/app/common/dialog.css
+++ b/tracuse_project/assets/styles/app/common/dialog.css
@@ -16,6 +16,7 @@
     height: 100%;
     width: 100%;
     margin: 0;
+    padding: 0;
 }
 
 .dialog-popout.drag {
@@ -48,7 +49,7 @@
     position: relative;
     height: 100%;
     margin: 0;
-    border-left: 2px solid;
+    border: 1px solid;
     vertical-align: top;
 }
 
